fix: FinanceService tipo generico no generateSequentialReceiptNumber
- Substituir List.of() por new ArrayList<>() para evitar inferencia de tipo
- Usar toList() em vez de collect(Collectors.toList())